tests/baselines/reference/genericConstraint2.errors.txt
tests/cases/compiler/genericConstraint2.ts(5,18): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/genericConstraint2.ts(11,7): error TS2421: Class 'ComparableString' incorrectly implements interface 'Comparable<string>':
  Property 'comparer' is missing in type 'ComparableString'.
tests/cases/compiler/genericConstraint2.ts(21,17): error TS2343: Type 'ComparableString' does not satisfy the constraint 'Comparable<unknown>':
  Property 'comparer' is missing in type 'ComparableString'.


==== tests/cases/compiler/genericConstraint2.ts (3 errors) ====
    interface Comparable<T> {
        comparer(other: T): number;
    }
    
    function compare<T extends Comparable<T>>(x: T, y: T): number {
                     ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        if (x == null) return y == null ? 0 : -1;
        if (y == null) return 1;
        return x.comparer(y);
    }
    
    class ComparableString implements Comparable<string>{
          ~~~~~~~~~~~~~~~~
!!! error TS2421: Class 'ComparableString' incorrectly implements interface 'Comparable<string>':
!!! error TS2421:   Property 'comparer' is missing in type 'ComparableString'.
        constructor(public currentValue: string) { }
    
        localeCompare(other) {
            return 0;
        }
    }
    
    var a = new ComparableString("a");
    var b = new ComparableString("b");
    var c = compare<ComparableString>(a, b);
                    ~~~~~~~~~~~~~~~~
!!! error TS2343: Type 'ComparableString' does not satisfy the constraint 'Comparable<unknown>':
!!! error TS2343:   Property 'comparer' is missing in type 'ComparableString'.